--- a/Daashboard_2.0/Dashboard/src/assets/css/Home.css
+++ b/Daashboard_2.0/Dashboard/src/assets/css/Home.css
@@ -14,6 +14,7 @@
     margin-top: 40px;
     border-radius: 20px;
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0,0.2);
+    transition: all 1s;
 }
 .bottom
 {
@@ -30,6 +31,7 @@
    padding: 20px;
    border-radius: 20px;
    box-shadow: 0 8px 16px 0 rgba(0, 0, 0,0.2);
+   transition: all 1s;
 }
 
 .button
@@ -57,4 +59,9 @@
     display: grid;
     height: 85px;
     grid-template-columns: 2fr 1fr;
+}
+
+.container1:hover,.busiest-hour:hover,.busiesthour:hover
+{
+   box-shadow: none;
 }
