--- a/Daashboard_2.0/Dashboard/src/assets/css/Sidebar.css
+++ b/Daashboard_2.0/Dashboard/src/assets/css/Sidebar.css
@@ -1,3 +1,6 @@
+a{
+    color:rgb(255, 255, 255);;
+}
 .wrapper-bar{
     display: grid;
     grid-template-columns: 1fr 5fr;
@@ -8,3 +11,14 @@
     margin-left: -2vh;
 
 }
+
+.feature
+{
+    position: relative;
+    top: 20vh;
+    left: 3vh;
+    
+    font-size: 20px;
+    letter-spacing: 1px;
+}
+
