Final commit for today

--- a/Daashboard_2.0/Dashboard/src/assets/css/GuestEntries.css
+++ b/Daashboard_2.0/Dashboard/src/assets/css/GuestEntries.css
@@ -1,14 +1,39 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital@1&display=swap');
 table{
     position: relative;
     top: 17%;
     width: 70%;
     height: 70%;
-    border: 2px solid black;
+    box-shadow: 0 0 40px 0 rgba(0,0,0,.15);
     left: 15%;
     border-collapse: collapse;
+    border-radius: 20px;
 }
+
 th{
-    border: 2px solid black;
+    background-color: #6c7ae0;
+    color: #fff;
+    font-family: 'Lato';
+    font-style: italic;
+    font-weight: 600;
+    font-display: swap;
+    font-size: larger;
+    letter-spacing: 1px;
+}
+
+tr:nth-child(even){
+    background-color: #f8f6ff;
+}
+th:first-child{
+    border-top-left-radius: 20px;
+    /* border-bottom-left-radius: 20px; */
+}
+
+th:last-child{
+   
+        border-top-right-radius: 20px;
+        /* border-bottom-right-radius: 20px; */
+    
 }
 tr{
     height: 20px;
@@ -16,5 +41,5 @@ tr{
 td{
 
     text-align: center;
-    border: 2px solid black;
 }
+    
